# p2p_chat

p2p_chat/: CMakeLists.txt  README.md  main.cpp
p2p_chat/common/: common.cpp  common.h
p2p_chat/encryption/: decrypt.cpp  decrypt.h  encrypt.cpp  encrypt.h
p2p_chat/networking/: client.cpp  server.cpp
p2p_chat/ui/: cli.cpp  cli.h
